--- a/templates/salle/afficher.html.twig
+++ b/templates/salle/afficher.html.twig
@@ -8,6 +8,7 @@
     <title>Salle</title>
 </head>
     <body>
+        <img src="/images/upjv.png" alt="" width="100" height="100">
         <h1>Salles : {{ numero }}</h1>
         <p>
             Voici quelques informations concernant la salles numéro : {{ numero }}.<br \>
