--- a/templates/salle/voir.html.twig
+++ b/templates/salle/voir.html.twig
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>treize</title>
-</head>
+    <head>
+        <title>{{ designation }}</title>
+    </head>
 <body>
 <ul>
     <li>batiment {{ salle.batiment }}</li>
