--- a/templates/salle/accueil.html.twig
+++ b/templates/salle/accueil.html.twig
@@ -8,11 +8,7 @@
         <title>Accueil</title>
     </head>
 <body>
-    <h1>Salles : </h1>
-    <p>
-        Voici quelques informations concernant les salles.<br \>
-        En particulier, la salle {{ numero }} <br \>
-        blablablablabla blablablabla blablablabla
-    </p>
+    <h1>Gestion des Salles Informatiques</h1>
+    <p><i>page visitée {{ numero }} fois.</i></p>
 </body>
 </html>
