--- a/templates/salle/ajouter2.html.twig
+++ b/templates/salle/ajouter2.html.twig
@@ -2,6 +2,6 @@
 <html>
     <body>
     <h2>ajouter une salle</h2>
-    {{ form(monFormulaire) }}
+    {% include "salle/formulaire.html.twig" %}
     </body>
 </html>
